
syntax = "proto3";
option go_package = "github.com/SpeedReach/monify";

import "google/protobuf/empty.proto";

message MEmpty{}
service MediaService {
  rpc ConfirmFileUsage(ConfirmFileUsageRequest) returns (google.protobuf.Empty){}
  rpc GetFileUrl(GetFileUrlRequest) returns (GetFileUrlResponse){}
}


message GetFileUrlRequest {
  string file_id = 1;
}

message GetFileUrlResponse {
  string url = 1;
}

message ConfirmFileUsageRequest {
  string file_id = 1;
  Usage usage = 2;
  string user_id = 3;
}

enum Usage {
  Undefined = 0;
  UserAvatar = 1;
  GroupAvatar = 2;
}
